--- a/contactform.html
+++ b/contactform.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form id= "form" action="submitform.html" method="GET">
-    <input type="text" id="firstname" name="firstname" required placeholer="Enter your first name">
+    <input type="text" id="firstname" name="firstname" required placeholder="Enter your first name">
     <input type="text" id="name" name="lastname" not required placeholder="Enter your last name">
     <input type="text" id="email" name="email" required placeholder="Enter your email address">
     <input type="text" id="comment" name="Comment" not required placeholder="Comment">
