--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script src="bootstrap-5.3.8-dist\js\bootstrap.bundle.min.js"></script>
 <div class="container text-center bg-dark-subtle">
   <div class="row row-cols-2">
-    <div class="col">Column1
+    <div class="col">
 <img src="download.jpg" class="img-fluid w-25 h-50" alt="Photo"></div>
-    <div class="col">Column2 <img src="peacockpic.jpg" class="img-fluid w-25 h-50" alt="Photo"></div>
-    <div class="col">Column3 <img src="boulderpic.jpg" class="img-fluid w-52 h-50" alt="Photo"> </div>
-    <div class="col">Column4 <img src="photo-masthead-375-BoK_p8LG.webp" class= "img-fluid w-25 h-50" alt="Photo">
+    <div class="col"> <img src="peacockpic.jpg" class="img-fluid w-25 h-50" alt="Photo"></div>
+    <div class="col"> <img src="boulderpic.jpg" class="img-fluid w-52 h-50" alt="Photo"> </div>
+    <div class="col"> <img src="photo-masthead-375-BoK_p8LG.webp" class= "img-fluid w-25 h-50" alt="Photo">
   </div>
 </div>
