--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="row row-cols-2">
     <div class="col">
 <img src="download.jpg" class="img-fluid w-25 h-50" alt="Photo"></div>
-    <div class="col"> <img src="peacockpic.jpg" class="img-fluid w-25 h-50" alt="Photo"></div>
+    <div class="col"> <img src="peacockpic.jpg" class="img-fluid width="350 hieght-"250" alt="Photo"></div>
     <div class="col"> <img src="boulderpic.jpg" class="img-fluid w-52 h-50" alt="Photo"> </div>
     <div class="col"> <img src="photo-masthead-375-BoK_p8LG.webp" class= "img-fluid w-25 h-50" alt="Photo">
   </div>
